# litmus

./: .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/: dependabot.yml  release.yml
.github/workflows/: bandit.yml  ci-quality.yml  ci-tests.yml  ci.yml  osv-scanner.yml  publish.yml
docs/: AUDIT.md  PROMPT-leaderboard-report.md  ROADMAP.md  leaderboard-models — копия.html  leaderboard-models.html  leaderboard-temp.html  report-compare-5-models-20260327.html  report-glm-4.7.html  report-kimi-k2.5-20260325_140531.html  report-qwen-3.5-20260327-aggregate.html
docs/design-system/: design-system-checklist.md  design-system-spec.md
docs/superpowers/plans/: 2026-03-25-split-app-into-screens.md  2026-03-26-phase1-foundation.md  2026-03-26-phase2-tui-shell.md  2026-03-26-phase3-engine.md  2026-03-26-phase4-run-screen.md  2026-03-26-web-phase1-foundation.md  2026-03-27-web-phase2-run-engine.md  2026-03-27-web-phase3-compare-screen.md  2026-03-28-unified-judge-system.md  2026-03-29-web-phase4-scenarios-screen.md  2026-03-29-web-phase5-agents-settings.md  2026-03-30-web-phase6-polish-ux.md  2026-04-01-agent-auth-system.md  2026-04-01-agent-type-separation.md  2026-04-01-scenario-content-to-db.md  2026-04-02-acp-integration.md  2026-04-03-acp-phase4-agent-onboarding.md  2026-04-04-acp-auth-integration.md
docs/superpowers/specs/: 2026-03-25-split-app-into-screens-design.md  2026-03-26-litmus-web-design.md  2026-03-26-ux-redesign-design.md  2026-03-26-ux-redesign-ratatui-design.md  2026-03-26-ux-redesign-tui-design.md  2026-03-27-compare-screen-design.md  2026-03-27-web-phase2-run-engine-design.md  2026-03-28-unified-judge-system-design.md  2026-03-29-acp-integration-design.md  2026-03-30-web-phase6-polish-ux-design.md  2026-04-04-acp-auth-integration-design.md
nextgen/: Cargo.toml
nextgen/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  model.rs  pack.rs  scenario.rs
nextgen/src/db/: mod.rs  queries.rs  schema.rs
nextgen/src/engine/: batch.rs  encoding.rs  mod.rs  registry.rs  runner.rs  scanner.rs  session.rs  steplog.rs
nextgen/src/ui/: dashboard.rs  mod.rs  styles.rs  tabs.rs
nextgen/src/ui/compare/: detail.rs  input.rs  leaderboard.rs  matrix.rs  mod.rs
nextgen/src/ui/run/: matrix.rs  matrix_input.rs  mod.rs  progress.rs
nextgen/src/ui/scenarios/: input.rs  mod.rs  render.rs
nextgen/tests/: config_test.rs  db_test.rs  scenario_test.rs
nextgen/tests/fixtures/: config.yaml
nextgen/tests/fixtures/template/1-data-structure/: prompt.txt  scoring.csv  task.txt
src/litmus/: __init__.py  agents.py  analysis.py  app.py  report.py  run.py
src/litmus/pack/: __init__.py  (+2 more)
web/: .env.example  .gitignore  Dockerfile  docker-compose.yml  garage.toml  next.config.ts  package-lock.json  package.json  vitest.config.e2e.ts  vitest.config.ts
web/agents/: README.md  init.sh
web/drizzle/: 0000_jazzy_changeling.sql  0001_slimy_magdalene.sql  0002_dark_doctor_spectrum.sql  0003_compare_latest_results_index.sql  0004_judge_system.sql  0005_agent_secrets.sql  0006_agent_type.sql  0007_scenario_content.sql  0008_acp_auth.sql
web/e2e/: run-acp-lifecycle.test.ts  run-pipeline.test.ts
web/scripts/: pack.ts
web/src/: instrumentation.ts
(+212 files in other folders)
