[package]
name = "litmus-nextgen"
version = "0.1.0"
edition = "2024"

[dependencies]
shell-words = "1"
serde = { version = "1", features = ["derive"] }
which = "7"
serde_yml = "0.0.12"
rusqlite = { version = "0.34", features = ["bundled"] }
rusqlite_migration = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
csv = "1"
serde_json = "1"
thiserror = "2"
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
dirs = "6"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
